@@ -1,3 +1,5 @@
+    - Add create_media_metadata endpoint endpoint
+
 4.01010 2014-03-25
     - Replace missing POD file
 
